--- a/agend.html
+++ b/agend.html
@@ -19,14 +19,70 @@
                     <div class="navbttns" style="font-weight: 600;">agenda</div>
                     <a id="navinsta" href="" target="_blank"></a>
                     <a id="navface" href="" target="_blank"></a>
-                    <div class="navlangs" style="font-weight: 400;">PT</div>
+                    <div class="navlangs" style="font-weight: 600;">PT</div>
                     <a class="navlangs" target="_self">EN</a>
                 </div>
             </div>
         </nav>
         <div id="agendmain">
             <div class="age_hold">
-                <div class="age_titl">agenda</div>
+                <div class="age_titl">agenda
+                    <a class="age_titllink">download da agenda</a></div>
+                <div class="age_btxt"><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p></div>
+            </div>
+            <div class="age_hold">
+                <div class="age_localh">
+                    <a class="age_locals1">FBAUL</a>
+                    <a class="age_locals2">LxFactory</a>
+                </div>
+                <iframe class="age_localv" src=""></iframe>
+            </div>
+            <div class="age_hold">
+                <div class="age_stitl">actividades</div>
+                <div class="age_holdb">
+                <div class="age_holdsec1">
+                    <div class="age_actbox1">
+                        <div class="age_actimg" style="background-image: url(css/img/img1.jpg)">
+                            <div class="age_acttitl">Dear Europe</div>
+                        </div>
+                        <div class="age_acttxt">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>
+                    </div>
+                    <div class="age_actbox1">
+                        <div class="age_actimg" style="background-image: url(css/img/img3.jpg)">
+                            <div class="age_acttitl">Põe quanto és no mínimo que fazes - Workshop de Turma</div>
+                        </div>
+                        <div class="age_acttxt">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>
+                    </div>
+                </div>
+                <div class="age_holdsec1">
+                    <div class="age_actbox2">
+                        <div class="age_actimg" style="background-image: url(css/img/img5.jpg)">
+                            <div class="age_acttitl">O Fim do Mundo em Cuecas - Typejam Sessions'17</div>
+                        </div>
+                        <div class="age_acttxt">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>
+                    </div>
+                </div>
+                </div>
+            </div>
+            <div class="age_hold">
+                <div class="age_stitl">eventos anteriores</div>
+                <div class="age_holdb">
+                    <div class="age_eabox">
+                        <div class="age_eaimg" style="background-image: url(css/img/img2.jpg)"></div>
+                        <div class="age_eatitl">Evento</div>
+                        <div class="age_eatxt">Local</div>
+                    </div>
+                    <div class="age_eabox">
+                        <div class="age_eaimg" style="background-image: url(css/img/img4.jpg)"></div>
+                        <div class="age_eatitl">Evento</div>
+                        <div class="age_eatxt">Local</div>
+                    </div>
+                    <div class="age_eabox">
+                        <div class="age_eaimg" style="background-image: url(css/img/img7.jpg)"></div>
+                        <div class="age_eatitl">Evento</div>
+                        <div class="age_eatxt">Local</div>
+                    </div>
+                </div>
             </div>
         </div>
         <div id="foot">
