--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a class="navbttns" href="agend.html" target="_self">agenda</a>
                     <a id="navinsta" href="" target="_blank"></a>
                     <a id="navface" href="" target="_blank"></a>
-                    <div class="navlangs" style="font-weight: 400;">PT</div>
+                    <div class="navlangs" style="font-weight: 600;">PT</div>
                     <a class="navlangs" href="" target="_self">EN</a>
                 </div>
             </div>
@@ -132,19 +132,19 @@
                         <div class="hmain_apics" style="background-image: url(css/img/img2.jpg);"></div>
                         <div class="hmain_adate">21 Set.</div>
                         <div class="hmain_atitl">Evento</div>
-                        <div class="hmain_atxt">Local</div>
+                        <div class="hmain_attxt">Local</div>
                     </div>
                     <div class="hmain_ablk">
                         <div class="hmain_apics" style="background-image: url(css/img/img5.jpg);"></div>
                         <div class="hmain_adate">2 Out.</div>
                         <div class="hmain_atitl">Evento</div>
-                        <div class="hmain_atxt">Local</div>
+                        <div class="hmain_attxt">Local</div>
                     </div>
                     <div class="hmain_ablk">
                         <div class="hmain_apics" style="background-image: url(css/img/img6.jpg);"></div>
                         <div class="hmain_adate">25 Nov.</div>
                         <div class="hmain_atitl">Evento</div>
-                        <div class="hmain_atxt">Local</div>
+                        <div class="hmain_attxt">Local</div>
                     </div>
                 </div>
                 <div class="hmain_blkt4">
