--- a/proj.html
+++ b/proj.html
@@ -20,7 +20,7 @@
                     <a class="navbttns" href="agend.html" target="_self">agenda</a>
                     <a id="navinsta" href="" target="_blank"></a>
                     <a id="navface" href="" target="_blank"></a>
-                    <div class="navlangs" style="font-weight: 400;">PT</div>
+                    <div class="navlangs" style="font-weight: 600;">PT</div>
                     <a class="navlangs" target="_self">EN</a>
                 </div>
             </div>
@@ -86,31 +86,31 @@
                 <div class="msprojtitl">subtema 1</div>
                 <div class="proj_tplaygrnd">
                     <div class="proj_tfence1a">
-                        <div class="proj_tbox">
+                        <div class="proj_tbox2">
                             <div class="proj_timg2" style="background-image: url(css/img/patrn2.jpg)"></div>
                             <div class="proj_ttitl">nome do projecto</div>
                             <div class="proj_ttxt">legenda</div>
                         </div>
-                        <div class="proj_tbox">
+                        <div class="proj_tbox1">
                             <div class="proj_timg1" style="background-image: url(css/img/patrn3.jpg)"></div>
                             <div class="proj_ttitl">nome do projecto</div>
                             <div class="proj_ttxt">legenda</div>
                         </div>
-                        <div class="proj_tbox">
+                        <div class="proj_tbox2">
                             <div class="proj_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
                             <div class="proj_ttitl">nome do projecto</div>
                             <div class="proj_ttxt">legenda</div>
                         </div>
                     </div>
                     <div class="proj_tfence2a">
-                        <div class="proj_tbox">
+                        <div class="proj_tbox1">
                             <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
                             <div class="proj_ttitl">nome do projecto</div>
                             <div class="proj_ttxt">legenda</div>
                         </div>
                     </div>
                     <div class="proj_tfence2c">
-                        <div class="proj_tbox">
+                        <div class="proj_tbox2">
                             <div class="proj_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
                             <div class="proj_ttitl">nome do projecto</div>
                             <div class="proj_ttxt">legenda</div>
@@ -120,19 +120,19 @@
                 <div class="msprojtitl">subtema 2</div>
                 <div class="proj_tplaygrnd">
                     <div class="proj_tfence2a">
-                        <div class="proj_tbox">
+                        <div class="proj_tbox1">
                             <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
                             <div class="proj_ttitl">nome do projecto</div>
                             <div class="proj_ttxt">legenda</div>
                         </div>
                     </div>
                     <div class="proj_tfence1b">
-                        <div class="proj_tbox">
+                        <div class="proj_tbox1">
                             <div class="proj_timg1" style="background-image: url(css/img/patrn3.jpg)"></div>
                             <div class="proj_ttitl">nome do projecto</div>
                             <div class="proj_ttxt">legenda</div>
                         </div>
-                        <div class="proj_tbox">
+                        <div class="proj_tbox2">
                             <div class="proj_timg2" style="background-image: url(css/img/patrn1.jpg)"></div>
                             <div class="proj_ttitl">nome do projecto</div>
                             <div class="proj_ttxt">legenda</div>
@@ -141,12 +141,12 @@
                 </div>
                 <div class="proj_tplaygrnd">
                     <div class="proj_tfence1c">
-                        <div class="proj_tbox">
+                        <div class="proj_tbox2">
                             <div class="proj_timg2" style="background-image: url(css/img/patrn2.jpg)"></div>
                             <div class="proj_ttitl">nome do projecto</div>
                             <div class="proj_ttxt">legenda</div>
                         </div>
-                        <div class="proj_tbox">
+                        <div class="proj_tbox1">
                             <div class="proj_timg1" style="background-image: url(css/img/patrn3.jpg)"></div>
                             <div class="proj_ttitl">nome do projecto</div>
                             <div class="proj_ttxt">legenda</div>
@@ -155,19 +155,19 @@
                 </div>
                 <div class="proj_tplaygrnd">
                     <div class="proj_tfence2b">
-                        <div class="proj_tbox">
+                        <div class="proj_tbox1">
                             <div class="proj_timg1" style="background-image: url(css/img/patrn1.jpg)"></div>
                             <div class="proj_ttitl">nome do projecto</div>
                             <div class="proj_ttxt">legenda</div>
                         </div>
                     </div>
                     <div class="proj_tfence2d">
-                        <div class="proj_tbox">
+                        <div class="proj_tbox2">
                             <div class="proj_timg2" style="background-image: url(css/img/patrn3.jpg)"></div>
                             <div class="proj_ttitl">nome do projecto</div>
                             <div class="proj_ttxt">legenda</div>
                         </div>
-                        <div class="proj_tbox">
+                        <div class="proj_tbox1">
                             <div class="proj_timg1" style="background-image: url(css/img/patrn2.jpg)"></div>
                             <div class="proj_ttitl">nome do projecto</div>
                             <div class="proj_ttxt">legenda</div>
