--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     </div>
                 </div>
                 <div class="hmain_blkt4">
-                    <a class="hmoreico" href="" target="_self">+</a>
+                    <a class="hmoreico" href="agend.html" target="_self">+</a>
                 </div>
             </div>
             <div class="hmain_secs">
