--- a/sobre.html
+++ b/sobre.html
@@ -37,11 +37,11 @@
                 <div id="etap_cols">
                     <div class="etap_col"><div class="s_txt"><p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p></div></div>
                     <div class="etap_col">
-                        <div class="s_stxt">partimos</div>
+                        <a class="s_stxt" href="proj.html#desti1" target="_self">partimos</a>
                         <p class="s_txt2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-                        <div class="s_stxt">vamos</div>
+                        <a class="s_stxt" href="proj.html#desti2" target="_self">vamos</a>
                         <p class="s_txt2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
-                        <div class="s_stxt">somos</div>
+                        <a class="s_stxt" href="proj.html#desti3" target="_self">somos</a>
                         <p class="s_txt2">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
                     </div>
                 </div>
