--- a/agend.html
+++ b/agend.html
@@ -42,9 +42,9 @@
                 <div class="age_holdb">
                 <div class="age_holdsec1">
                     <div class="age_actbox1">
-                        <div class="age_actimg" style="background-image: url(css/img/img1.jpg)">
+                        <a class="age_actimg" style="background-image: url(css/img/img1.jpg)" href="deareu.html" target="_self">
                             <div class="age_acttitl">Dear Europe</div>
-                        </div>
+                        </a>
                         <div class="age_acttxt">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>
                     </div>
                     <div class="age_actbox1">
