--- a/age_fbaul.html
+++ b/age_fbaul.html
@@ -11,33 +11,33 @@
     <body>
         <div class="ageifrm_m">
             <div class="ifrm_box">
-                <div class="ifrm_pics" style="background-image: url(css/img/img6.jpg)"></div>
-                <div class="ifrm_date">date</div>
+                <div class="ifrm_pics" style="background-image: url(css/img/img6.jpg)"><div class="ifrm_over"></div></div>
+                <div class="ifrm_date">21 Out</div>
                 <div class="ifrm_titl">Nome do Projecto</div>
             </div>
             <div class="ifrm_box">
                 <div class="ifrm_pics" style="background-image: url(css/img/img1.jpg)"></div>
-                <div class="ifrm_date">date</div>
+                <div class="ifrm_date">21 Out</div>
                 <div class="ifrm_titl">Nome do Projecto</div>
             </div>
             <div class="ifrm_box">
                 <div class="ifrm_pics" style="background-image: url(css/img/img2.jpg)"></div>
-                <div class="ifrm_date">date</div>
+                <div class="ifrm_date">21 Out</div>
                 <div class="ifrm_titl">Nome do Projecto</div>
             </div>
             <div class="ifrm_box">
                 <div class="ifrm_pics" style="background-image: url(css/img/img4.jpg)"></div>
-                <div class="ifrm_date">date</div>
+                <div class="ifrm_date">21 Out</div>
                 <div class="ifrm_titl">Nome do Projecto</div>
             </div>
             <div class="ifrm_box">
                 <div class="ifrm_pics" style="background-image: url(css/img/img3.jpg)"></div>
-                <div class="ifrm_date">date</div>
+                <div class="ifrm_date">21 Out</div>
                 <div class="ifrm_titl">Nome do Projecto</div>
             </div>
             <div class="ifrm_box">
                 <div class="ifrm_pics" style="background-image: url(css/img/img5.jpg)"></div>
-                <div class="ifrm_date">date</div>
+                <div class="ifrm_date">21 Out</div>
                 <div class="ifrm_titl">Nome do Projecto</div>
             </div>
         </div>
