--- a/agend.html
+++ b/agend.html
@@ -24,6 +24,29 @@
                 </div>
             </div>
         </nav>
+        <div class="nav_page">
+            <div class="np_bar">
+                <a class="np_logo"></a>
+                <a class="np_close">x</a>
+            </div>
+            <div class="np_cont">
+                <a class="np_butts">sobre</a>
+                <a class="np_butts">projecto</a>
+                <a class="np_butts">exposição</a>
+                <a class="np_butts">agenda</a>
+                <div class="np_srack">
+                    <div class="np_langs" style="font-weight: 600;">PT</div>
+                    <a class="np_langs">EN</a>
+                </div>
+                <div class="np_srack">
+                    <a class="np_social" style="mask-image:url(css/img/instaic.svg);-webkit-mask-image:url(css/img/instaic.svg);"></a>
+                    <a class="np_social" style="mask-image:url(css/img/instaic.svg);-webkit-mask-image:url(css/img/faceic.svg);"></a>
+                </div>
+            </div>
+            <div class="np_foot">
+                <a class="np_back"></a>
+            </div>
+        </div>
         <div id="agendmain">
             <div class="age_hold">
                 <div class="age_titl">agenda
@@ -43,12 +66,14 @@
                 <div class="age_holdsec1">
                     <div class="age_actbox1">
                         <a class="age_actimg" style="background-image: url(css/img/img1.jpg)" href="deareu.html" target="_self">
+                            <div class="img_over"></div>
                             <div class="age_acttitl">Dear Europe</div>
                         </a>
                         <div class="age_acttxt">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>
                     </div>
                     <div class="age_actbox1">
                         <div class="age_actimg" style="background-image: url(css/img/img3.jpg)">
+                            <div class="img_over"></div>
                             <div class="age_acttitl">Põe quanto és no mínimo que fazes - Workshop de Turma</div>
                         </div>
                         <div class="age_acttxt">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>
@@ -57,6 +82,7 @@
                 <div class="age_holdsec1">
                     <div class="age_actbox2">
                         <div class="age_actimg" style="background-image: url(css/img/img5.jpg)">
+                            <div class="img_over"></div>
                             <div class="age_acttitl">O Fim do Mundo em Cuecas - Typejam Sessions'17</div>
                         </div>
                         <div class="age_acttxt">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</div>
