--- a/expo.html
+++ b/expo.html
@@ -25,6 +25,29 @@
                 </div>
             </div>
         </nav>
+        <div class="nav_page">
+            <div class="np_bar">
+                <a class="np_logo"></a>
+                <a class="np_close">x</a>
+            </div>
+            <div class="np_cont">
+                <a class="np_butts">sobre</a>
+                <a class="np_butts">projecto</a>
+                <a class="np_butts">exposição</a>
+                <a class="np_butts">agenda</a>
+                <div class="np_srack">
+                    <div class="np_langs" style="font-weight: 600;">PT</div>
+                    <a class="np_langs">EN</a>
+                </div>
+                <div class="np_srack">
+                    <a class="np_social" style="mask-image:url(css/img/instaic.svg);-webkit-mask-image:url(css/img/instaic.svg);"></a>
+                    <a class="np_social" style="mask-image:url(css/img/instaic.svg);-webkit-mask-image:url(css/img/faceic.svg);"></a>
+                </div>
+            </div>
+            <div class="np_foot">
+                <a class="np_back"></a>
+            </div>
+        </div>
         <div id="expomain">
             <div class="expo_holda">
                 <div class="expo_holdb">
