--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 }(document, 'script', 'facebook-jssdk'));</script>
         <nav id="navbar">
             <div id="navbox">
-                <a id="navlogo" href="index.html"></a>
+                <a id="navlogo" href="index.html" target="_self"></a>
                 <div class="navrack">
                     <a class="navbttns" href="sobre.html" target="_self">sobre</a>
                     <a class="navbttns" href="proj.html" target="_self">projectos</a>
@@ -31,8 +31,32 @@
                     <div class="navlangs" style="font-weight: 600;">PT</div>
                     <a class="navlangs" href="" target="_self">EN</a>
                 </div>
+                <a class="navburger"></a>
             </div>
         </nav>
+        <div class="nav_page">
+            <div class="np_bar">
+                <a class="np_logo"></a>
+                <a class="np_close">x</a>
+            </div>
+            <div class="np_cont">
+                <a class="np_butts" href="sobre.html" target="_self">sobre</a>
+                <a class="np_butts" href="proj.html" target="_self">projecto</a>
+                <a class="np_butts" href="expo.html" target="_self">exposição</a>
+                <a class="np_butts" href="agend.html" target="_self">agenda</a>
+                <div class="np_srack">
+                    <div class="np_langs" style="font-weight: 600;">PT</div>
+                    <a class="np_langs">EN</a>
+                </div>
+                <div class="np_srack">
+                    <a class="np_social" style="mask-image:url(css/img/instaic.svg);-webkit-mask-image:url(css/img/instaic.svg);"></a>
+                    <a class="np_social" style="mask-image:url(css/img/instaic.svg);-webkit-mask-image:url(css/img/faceic.svg);"></a>
+                </div>
+            </div>
+            <div class="np_foot">
+                <a class="np_back"></a>
+            </div>
+        </div>
         <div id="head_wrap">
             <div class="vid_wrap">
             <iframe id="head_vid" src="https://www.youtube.com/embed/2L9vFNMvIBE?rel=0&amp;showinfo=0;autoplay=1;mute=1;showinfo=0;controls=0" height="640" width="360" webkitallowfullscreen movallowfullscreen allowfullscreen data-ready="true" frameborder="0"></iframe>
@@ -42,8 +66,12 @@
                     <div class="headtitl"><b>Exposição de Finalistas<br>de Design de Comunicação</b></div>
                     <div class="headtxt">2016/2017</div>
                     <div class="headtxt2">Faculdade de Belas-Artes<br>Universidade de Lisboa</div>
-                    <div class="headdates"><b>FBAUL</b> <t>2 - 15 Nov</t></div>
-                    <div class="headdates"><b>LxFactory</b> <t>23 Nov - 8 Dec</t></div>
+                    <div class="headdateh">
+                        <div class="headdates"><b>FBAUL</b></div> <div class="headdates"><t>2 - 15 Nov</t></div>
+                    </div>
+                    <div class="headdateh">
+                        <div class="headdates"><b>LxFactory</b> </div> <div class="headdates"><t>23 Nov - 8 Dec</t></div>
+                    </div>
                 </div>
             </div>
             <a class="playgate">
@@ -56,9 +84,9 @@
         </div>
         <div id="hmain_cont">
             <div class="hmain_secs">
+                <div class="hmain_titl">sobre</div>
                 <div class="hmain_blkt1">
                     <div class="hmain_blk1">
-                        <div class="hmain_titl">sobre</div>
                         <div class="hmain_btxt1">
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
                             <p>Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet.</p>
@@ -68,10 +96,11 @@
                     <div id="hmain_simg1"></div>
                 </div>
             </div>
-            <div class="hmain_secs" style="background-color: rgb(200,200,200)">
-                <div class="hmain_blkt1">
+            <div class="hmain_secp">
+                <div class="hmain_blkt2" style="margin: 0px;">
+                    <div class="hmain_titl2">projectos</div>
+                    <div class="hmain_blkt5">
                     <div class="hmain_blk1">
-                        <div class="hmain_titl2">projectos</div>
                         <a class="hmain_stxt2" href="proj.html#desti1" target="_self">partimos</a>
                         <div class="hmain_txt">
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
@@ -90,12 +119,13 @@
                             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet.</p>
                         </div>
                     </div>
+                    </div>
                 </div>
             </div>
-            <div class="hmain_secs">
+            <div class="hmain_sece">
                 <div class="hmain_blkt2">
                     <div class="hmain_titl">exposição</div>
-                    <div class="hmain_stitl"><p><b>Sem destino a</b> na Faculdade<br> de Belas-Artes de Lisboa<br> e no LxFactory</p></div>
+                    <div class="hmain_stitl"><p><b>Sem destino a</b> na Faculdade de Belas-Artes de Lisboa e no LxFactory</p></div>
                 </div>
                 <div class="hmain_blkt1">
                     <div class="hmain_blk1">
@@ -122,25 +152,27 @@
                     </div>
                 </div>
             </div>
-            <div class="hmain_secs">
+            <div class="hmain_seca">
             <div class="hmain_titl">agenda</div>
                 <div class="hmain_blkt3">
-                    <div class="hmain_btxt2">
-                        <p>Acompanha os próximos eventos na Faculdade de Belas-Artes de Lisboa e no LxFactory.</p>
+                    <div class="hmain_blk1">
+                        <div class="hmain_btxt3">
+                            <p>Acompanha os próximos eventos na Faculdade de Belas-Artes de Lisboa e no LxFactory.</p>
+                        </div>
                     </div>
-                    <div class="hmain_ablk">
+                    <div class="hmain_ablk1">
                         <div class="hmain_apics" style="background-image: url(css/img/img2.jpg);"></div>
                         <div class="hmain_adate">21 Set.</div>
                         <div class="hmain_atitl">Evento</div>
                         <div class="hmain_attxt">Local</div>
                     </div>
-                    <div class="hmain_ablk">
+                    <div class="hmain_ablk2">
                         <div class="hmain_apics" style="background-image: url(css/img/img5.jpg);"></div>
                         <div class="hmain_adate">2 Out.</div>
                         <div class="hmain_atitl">Evento</div>
                         <div class="hmain_attxt">Local</div>
                     </div>
-                    <div class="hmain_ablk">
+                    <div class="hmain_ablk3">
                         <div class="hmain_apics" style="background-image: url(css/img/img6.jpg);"></div>
                         <div class="hmain_adate">25 Nov.</div>
                         <div class="hmain_atitl">Evento</div>
@@ -151,28 +183,29 @@
                     <a class="hmoreico" href="agend.html" target="_self">+</a>
                 </div>
             </div>
-            <div class="hmain_secs">
+            <div class="hmain_secr">
                 <div class="hmain_titl">segue-nos nas redes sociais!</div>
                 <div class="hmain_blkt4">
                     <div class="hsocialbox">
                         <iframe src="https://snapwidget.com/embed/437032" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; height:100%"></iframe>
-                        <a class="hsocial_link">#semdestinoa</a>
                     </div>
                     <div class="hsocialbox">
                     <!-- FaceWidget -->
                         <div class="fb-page" data-href="https://www.facebook.com/semdestinoa/" data-tabs="timeline" data-width="350" data-height="350" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" style="width: 100%;height:100%;"><blockquote cite="https://www.facebook.com/semdestinoa/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/semdestinoa/">&lt;Sem destino a /&gt;</a></blockquote></div>
-                        <a class="hsocial_link">@semdestinoa</a>
                     </div>
+                    <div class="hmain_soico" style="background-image: url(css/img/instaic.svg)"></div>
+                        <div class="hmain_soico"style="background-image: url(css/img/faceic.svg)"></div>
                 </div>
             </div>
         </div>
         <div id="foot">
             <div id="footword">
-            <div class="foottitl">Sem destino a</div> 
-            <div class="foottxt">Exposição de Finalistas
-            <br>Design de Comunicação 2016/2017
-            <br>Faculdade de Belas-Artes de Lisboa
-            </div>
+                <div class="foottitl">Sem destino a</div> 
+                <div class="foottxt">Exposição de Finalistas
+                <br>Design de Comunicação 2016/2017
+                <br>Faculdade de Belas-Artes de Lisboa
+                </div>
+                <a class="foot_ficha">ficha técnica</a>
             </div>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
