--- a/proj.html
+++ b/proj.html
@@ -25,6 +25,29 @@
                 </div>
             </div>
         </nav>
+        <div class="nav_page">
+            <div class="np_bar">
+                <a class="np_logo"></a>
+                <a class="np_close">x</a>
+            </div>
+            <div class="np_cont">
+                <a class="np_butts">sobre</a>
+                <a class="np_butts">projecto</a>
+                <a class="np_butts">exposição</a>
+                <a class="np_butts">agenda</a>
+                <div class="np_srack">
+                    <div class="np_langs" style="font-weight: 600;">PT</div>
+                    <a class="np_langs">EN</a>
+                </div>
+                <div class="np_srack">
+                    <a class="np_social" style="mask-image:url(css/img/instaic.svg);-webkit-mask-image:url(css/img/instaic.svg);"></a>
+                    <a class="np_social" style="mask-image:url(css/img/instaic.svg);-webkit-mask-image:url(css/img/faceic.svg);"></a>
+                </div>
+            </div>
+            <div class="np_foot">
+                <a class="np_back"></a>
+            </div>
+        </div>
         <div id="head_wrap">
             <div class="vid_wrap">
             <iframe id="head_vid" src="https://www.youtube.com/embed/2L9vFNMvIBE/?autoplay=1&mute=1" height="640" width="360" webkitallowfullscreen movallowfullscreen allowfullscreen data-ready="true" frameborder="0"></iframe>
@@ -61,12 +84,12 @@
                     </div>
                     <div class="ap2_hold">
                         <div class="ap2_title">temáticas</div>
-                        <a class="ap2" href="#t1">tema 1</a>
-                        <a class="ap2" href="#t2">tema 2</a>
-                        <a class="ap2" href="#t3">tema 3</a>
-                        <a class="ap2" href="#t4">tema 4</a>
-                        <a class="ap2" href="#t5">tema 5</a>
-                        <a class="ap2" href="#t6">tema 6</a>
+                        <a class="ap2" href="#vt1">tema 1</a>
+                        <a class="ap2" href="#vt2">tema 2</a>
+                        <a class="ap2" href="#vt3">tema 3</a>
+                        <a class="ap2" href="#vt4">tema 4</a>
+                        <a class="ap2" href="#vt5">tema 5</a>
+                        <a class="ap2" href="#vt6">tema 6</a>
                     </div>
                 </div>
                 <a class="ap" href="#desti3">somos</a>
@@ -78,19 +101,19 @@
                     <div class="hprojtitl">vamos</div>
                     <div class="hprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
                 </div>
-                <div id="t1" class="mprojtxtb">
+                <div id="vt1" class="mprojtxtb">
                     <div class="mprojtitl">tema 1</div>
                     <div class="mprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
                     <div class="mprojstxt">Diciplina: Design de Comunicação IV</div>
                 </div>
-                <div class="msprojtitl">subtema 1</div>
+                <div id="vst1" class="msprojtitl">subtema 1</div>
                 <div class="proj_tplaygrnd">
                     <div class="proj_tfence1a">
-                        <div class="proj_tbox2">
+                        <a href="suffix_proj.html" class="proj_tbox2" target="_self">
                             <div class="proj_timg2" style="background-image: url(css/img/patrn2.jpg)"></div>
-                            <div class="proj_ttitl">nome do projecto</div>
+                            <div class="proj_ttitl">Suffix</div>
                             <div class="proj_ttxt">legenda</div>
-                        </div>
+                        </a>
                         <div class="proj_tbox1">
                             <div class="proj_timg1" style="background-image: url(css/img/patrn3.jpg)"></div>
                             <div class="proj_ttitl">nome do projecto</div>
@@ -117,7 +140,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="msprojtitl">subtema 2</div>
+                <div id="vst2" class="msprojtitl">subtema 2</div>
                 <div class="proj_tplaygrnd">
                     <div class="proj_tfence2a">
                         <div class="proj_tbox1">
@@ -174,7 +197,7 @@
                         </div>
                     </div>
                 </div>
-                <div id="t2" class="mprojtxtb">
+                <div id="vt2" class="mprojtxtb">
                     <div class="mprojtitl">tema 2</div>
                     <div class="mprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
                     <div class="mprojstxt">Diciplina: Design de Comunicação IV</div>
@@ -182,22 +205,22 @@
                 <div class="msprojtitl">subtema 1</div>
                 <div class="proj_tplaygrnd">
                 </div>
-                <div id="t3" class="mprojtxtb">
+                <div id="vt3" class="mprojtxtb">
                     <div class="mprojtitl">tema 3</div>
                     <div class="mprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
                     <div class="mprojstxt">Diciplina: Design de Comunicação IV</div>
                 </div>
-                <div id="t4" class="mprojtxtb">
+                <div id="vt4" class="mprojtxtb">
                     <div class="mprojtitl">tema 4</div>
                     <div class="mprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
                     <div class="mprojstxt">Diciplina: Design de Comunicação IV</div>
                 </div>
-                <div id="t5" class="mprojtxtb">
+                <div id="vt5" class="mprojtxtb">
                     <div class="mprojtitl">tema 5</div>
                     <div class="mprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
                     <div class="mprojstxt">Diciplina: Design de Comunicação IV</div>
                 </div>
-                <div id="t6" class="mprojtxtb">
+                <div id="vt6" class="mprojtxtb">
                     <div class="mprojtitl">tema 6</div>
                     <div class="mprojtxt">You think water moves fast? You should see ice. It moves like it has a mind. Like it knows it killed the world once and got a taste for murder. After the avalanche, it took us a week to climb out.</div>
                     <div class="mprojstxt">Diciplina: Design de Comunicação IV</div>
