--- a/agend.html
+++ b/agend.html
@@ -93,21 +93,21 @@
             <div class="age_hold">
                 <div class="age_stitl">eventos anteriores</div>
                 <div class="age_holdb">
-                    <div class="age_eabox">
-                        <div class="age_eaimg" style="background-image: url(css/img/img2.jpg)"></div>
+                    <a class="age_eabox">
+                        <div class="age_eaimg" style="background-image: url(css/img/img2.jpg)"><div class="eaimg_over"></div></div>
                         <div class="age_eatitl">Evento</div>
                         <div class="age_eatxt">Local</div>
-                    </div>
-                    <div class="age_eabox">
-                        <div class="age_eaimg" style="background-image: url(css/img/img4.jpg)"></div>
+                    </a>
+                    <a class="age_eabox">
+                        <div class="age_eaimg" style="background-image: url(css/img/img4.jpg)"><div class="eaimg_over"></div></div>
                         <div class="age_eatitl">Evento</div>
                         <div class="age_eatxt">Local</div>
-                    </div>
-                    <div class="age_eabox">
-                        <div class="age_eaimg" style="background-image: url(css/img/img7.jpg)"></div>
+                    </a>
+                    <a class="age_eabox">
+                        <div class="age_eaimg" style="background-image: url(css/img/img7.jpg)"><div class="eaimg_over"></div></div>
                         <div class="age_eatitl">Evento</div>
                         <div class="age_eatxt">Local</div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
