--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </nav>
         <div class="nav_page">
             <div class="np_bar">
-                <a class="np_logo"></a>
+                <a class="np_logo" href="index.html" target="_self"></a>
                 <a class="np_close">x</a>
             </div>
             <div class="np_cont">
@@ -63,9 +63,9 @@
             </div>
             <div id="head_shirt">
                 <div id="shirttxt">
-                    <div class="headtitl"><b>Exposição de Finalistas<br>de Design de Comunicação</b></div>
+                    <div class="headtitl"><b>Exposição de Finalistas de Design de Comunicação</b></div>
                     <div class="headtxt">2016/2017</div>
-                    <div class="headtxt2">Faculdade de Belas-Artes<br>Universidade de Lisboa</div>
+                    <div class="headtxt2">Faculdade de Belas-Artes Universidade de Lisboa</div>
                     <div class="headdateh">
                         <div class="headdates"><b>FBAUL</b></div> <div class="headdates"><t>2 - 15 Nov</t></div>
                     </div>
@@ -125,7 +125,7 @@
             <div class="hmain_sece">
                 <div class="hmain_blkt2">
                     <div class="hmain_titl">exposição</div>
-                    <div class="hmain_stitl"><p><b>Sem destino a</b> na Faculdade de Belas-Artes de Lisboa e no LxFactory</p></div>
+                    <div class="hmain_stitl"><b>Sem destino a</b> na Faculdade de Belas-Artes de Lisboa e no LxFactory</div>
                 </div>
                 <div class="hmain_blkt1">
                     <div class="hmain_blk1">
@@ -160,20 +160,26 @@
                             <p>Acompanha os próximos eventos na Faculdade de Belas-Artes de Lisboa e no LxFactory.</p>
                         </div>
                     </div>
-                    <div class="hmain_ablk1">
-                        <div class="hmain_apics" style="background-image: url(css/img/img2.jpg);"></div>
+                    <a class="hmain_ablk1">
+                        <div class="hmain_apics" style="background-image: url(css/img/img2.jpg);">
+                            <div class="apics_over"></div>
+                        </div>
                         <div class="hmain_adate">21 Set.</div>
                         <div class="hmain_atitl">Evento</div>
                         <div class="hmain_attxt">Local</div>
-                    </div>
+                    </a>
                     <div class="hmain_ablk2">
-                        <div class="hmain_apics" style="background-image: url(css/img/img5.jpg);"></div>
+                        <div class="hmain_apics" style="background-image: url(css/img/img5.jpg);">
+                        <div class="apics_over"></div>
+                        </div>
                         <div class="hmain_adate">2 Out.</div>
                         <div class="hmain_atitl">Evento</div>
                         <div class="hmain_attxt">Local</div>
                     </div>
                     <div class="hmain_ablk3">
-                        <div class="hmain_apics" style="background-image: url(css/img/img6.jpg);"></div>
+                        <div class="hmain_apics" style="background-image: url(css/img/img6.jpg);">
+                        <div class="apics_over"></div>
+                        </div>
                         <div class="hmain_adate">25 Nov.</div>
                         <div class="hmain_atitl">Evento</div>
                         <div class="hmain_attxt">Local</div>
